--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -30,7 +30,7 @@ p {
 header {
     width: auto;
     display: grid;
-    grid-template-columns: 15% 20% 50% 15%;
+    grid-template-columns: 20% 15% 40% 25%;
     grid-template-rows: 60% 40%;
     background-color: var(--Primary_color);
     color: var(--Accent1);
@@ -38,11 +38,15 @@ header {
     height: auto;
 }
 
+header .logo-img {
+    width: 50%;
+}
+
 footer {
     width: auto;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 60% 40%;
+    grid-template-rows: 50% 30% 20%;
     background-color: var(--Primary_color);
     color: var(--Accent1);
     text-align: center;
@@ -173,7 +177,10 @@ nav ul li {
 }
 
 nav ul.open li {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    margin-left: 5em;
+    padding: 0.5em;
 }
 
 nav ul li.active a {
@@ -306,4 +313,20 @@ button {
     cursor: pointer;
     text-align: center;
     margin-top: 1em;
+}
+
+#hamburgerBtn {
+    color: black;
+    background-color: white;
+}
+
+.divdate {
+    grid-row: 2;
+    grid-column: 1/5;
+    width: 100%;
+    margin-top: 1em;
+    padding-bottom: 2em;
+    padding-top: 0.25em;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
 }
