--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -363,3 +363,124 @@ main div {
 #weather-large {
     display: none;
 }
+
+
+/*----------- FORM --------------*/
+
+form fieldset {
+    margin: 2rem 0;
+    border: 1px solid #445ba9;
+    border-radius: 10px;
+    padding: 0.5rem 2%;
+}
+
+form legend {
+    color: var(--Secondary_color);
+    margin: 0 1rem;
+    padding: 0 .5rem;
+}
+
+form label.top,
+form div {
+    display: block;
+    padding-top: 1rem;
+    color: #9c2c13;
+    font-size: 0.8rem;
+}
+
+form label.top input,
+form label.top select {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: 0.75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+form label.sbs {
+    display: block;
+    padding: .75rem 0;
+    color: #555;
+}
+
+form input.submitBtn {
+    border: none;
+    background-color: var(--Primary_color);
+    color: white;
+    border-radius: 1rem;
+    padding: 0.75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
+}
+
+form label.top input:required {
+    border-left: red solid 6px;
+}
+
+form label.top input:required:valid {
+    border-left: green solid 6px;
+}
+
+
+/*----------- FOOTER --------------*/
+
+footer {
+    background-color: var(--Primary_color);
+    padding: .5rem 2%;
+    text-align: center;
+}
+
+
+/*----- Clearfix: Force an Element not to collapse -----*/
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.sbsp {
+    text-align: left;
+    margin-left: 2em;
+    margin-bottom: 0.5em;
+}
+
+h2 {
+    font-size: 1.3em;
+    padding-bottom: 0.1em;
+}
+
+form label.sbs {
+    text-shadow: 1px 1px var(--Accent2);
+}
+
+#nonmember {
+    color: #6a0dad;
+}
+
+#bronze {
+    color: #CD7F32;
+}
+
+#silver {
+    color: #C0C0C0;
+}
+
+#gold {
+    color: #FFD700;
+}
+
+.sbsp li,
+p.sbsp {
+    font-size: 0.85em;
+}
+
+#textarea {
+    margin-bottom: 1em;
+}
