--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -232,10 +232,15 @@
     }
     #spot1 {
         grid-column: 1/3;
+        margin-bottom: 0;
+        border-bottom: transparent;
     }
     #spotlight {
         grid-column: 4;
         grid-row: 1/4;
+    }
+    #spotlight div {
+        box-shadow: 0px 0px 30px 0px var(--Primary_color);
     }
     #spotlight img {
         width: 26%;
@@ -243,9 +248,13 @@
     }
     #spot2 {
         grid-column: 1/3;
+        margin-top: 0;
+        margin-bottom: 0;
+        border-bottom: transparent;
     }
     #spot3 {
         grid-column: 1/3;
+        margin-top: 0;
     }
     footer {
         font-size: .9rem;
