--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -253,7 +253,8 @@
         border-bottom: transparent;
     }
     #spot3 {
-        grid-column: 1/3;
+        display: grid;
+        grid-row: 3/4;
         margin-top: 0;
     }
     footer {
@@ -296,9 +297,6 @@
         grid-column: 1/4;
         grid-row: 2;
         width: 100%;
-    }
-    #spot3 {
-        display: block;
     }
     .large-div {
         display: block;
