--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -99,7 +99,7 @@
     }
     .spotlight {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         grid-column: 1/3;
         grid-row: 3/4;
     }
@@ -151,5 +151,8 @@
         width: 40px;
         margin-left: 20em;
         margin-right: -22em;
+    }
+    .discover-body img:hover {
+        box-shadow: 0px 0px 30px 0px black;
     }
 }
