--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -199,14 +199,20 @@ nav ul.open {
 
 #spot1 img {
     width: 100%;
+    margin: auto;
 }
 
 #spot2 img {
     width: 100%;
+    margin: auto;
 }
 
 #spot3 {
     display: none;
+}
+
+#spot3 img {
+    margin: auto
 }
 
 .icons li a img {
@@ -377,7 +383,7 @@ form fieldset {
 
 form legend {
     color: var(--Secondary_color);
-    margin: 0 1rem;
+    margin: auto;
     padding: 0 .5rem;
 }
 
@@ -387,6 +393,7 @@ form div {
     padding-top: 1rem;
     color: #9c2c13;
     font-size: 0.8rem;
+    text-align: center;
 }
 
 form label.top input,
@@ -407,6 +414,7 @@ form label.sbs {
     display: block;
     padding: .75rem 0;
     color: #555;
+    float: left;
 }
 
 form input.submitBtn {
@@ -415,7 +423,7 @@ form input.submitBtn {
     color: white;
     border-radius: 1rem;
     padding: 0.75rem 1.5rem;
-    margin: 0 0 2rem 2%;
+    margin: 0 0 2rem 40%;
     width: 96%;
     max-width: 20rem;
 }
@@ -450,6 +458,7 @@ footer {
     text-align: left;
     margin-left: 2em;
     margin-bottom: 0.5em;
+    text-align: center;
 }
 
 h2 {
@@ -459,31 +468,33 @@ h2 {
 
 form label.sbs {
     text-shadow: 1px 1px var(--Accent2);
+    margin-left: 48%;
 }
 
-#nonmember {
+#nonmember,
+#nonmember h1 {
     color: #6a0dad;
 }
 
-#bronze {
+#bronze,
+#bronze h1 {
     color: #CD7F32;
 }
 
-#silver {
+#silver,
+#silver h1 {
     color: #C0C0C0;
 }
 
-#gold {
+#gold,
+#gold h1 {
     color: #FFD700;
 }
 
 .sbsp li,
 p.sbsp {
     font-size: 0.85em;
-}
-
-#textarea {
-    margin-bottom: 1em;
+    text-align: center;
 }
 
 .hero-text {
@@ -520,6 +531,7 @@ textarea {
     margin-top: 2em;
     margin-bottom: 2em;
     border-radius: 5px;
+    margin-left: 36%;
 }
 
 #contact-form {
@@ -538,4 +550,9 @@ textarea {
 
 #confirm-p {
     padding: 1em;
+}
+
+#lastvisited {
+    margin: 2em;
+    margin-bottom: -2em;
 }
